--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
     <section id="second_section"> 
          <span>follow me on my jurny to become a full stuck web developer, as a pasion and a love to creat deffrent types of websites like personal, stores, company websites <br>and more....
          </span>    
-         <img src="/images/photo_1_2024-02-15_09-36-12.jpg" alt="comming soon" width="130px" height="130px" >
+         <img src="/images/photo_1.jpg" alt="comming soon" width="130px" height="130px" >
     </section>
    
     <section id="Img_section">
         <span>Some of My Images</span> 
         <section id="img-collection">
-        <img src="/images/photo_1_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="110px" height="130px" >
-        <img src="/images/photo_2_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="110px" height="130px" >
-        <img src="/images/photo_3_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="110px" height="130px" >
-        <img src="/images/photo_4_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="110px" height="130px" >
-        <img src="/images/photo_5_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="110px" height="130px" >
-        <img src="/images/photo_6_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="110px" height="130px" >
-        <img src="/images/photo_7_2024-02-15_09-36-12 - Copy.jpg" alt="Cooming Soon"  width="110px" height="130px" >
+        <img src="/images/photo_1.jpg" alt="Cooming Soon"   width="110px" height="130px" >
+        <img src="/images/photo_2.jpg" alt="Cooming Soon"   width="110px" height="130px" >
+        <img src="/images/photo_3.jpg" alt="Cooming Soon"   width="110px" height="130px" >
+        <img src="/images/photo_4.jpg" alt="Cooming Soon"   width="110px" height="130px" >
+        <img src="/images/photo_5.jpg" alt="Cooming Soon"   width="110px" height="130px" >
+        <img src="/images/photo_6.jpg" alt="Cooming Soon"   width="110px" height="130px" >
+        <img src="/images/photo_7.jpg" alt="Cooming Soon"  width="110px" height="130px" >
     </section>
     </section>
 
@@ -146,13 +146,13 @@
     <section id="work_section">
         <label for="">My Work</label> 
         <section id="img-collection">
-            <img src="/images/photo_1_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="160px" height="200px" >
-            <img src="/images/photo_2_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="160px" height="200px" >
-            <img src="/images/photo_3_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="160px" height="200px" >
-            <img src="/images/photo_4_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="160px" height="200px" >
-            <img src="/images/photo_5_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="160px" height="200px" >
-            <img src="/images/photo_6_2024-02-15_09-36-12.jpg" alt="Cooming Soon"   width="160px" height="200px" >
-            <img src="/images/photo_7_2024-02-15_09-36-12 - Copy.jpg" alt="Cooming Soon"  width="160px" height="200px" >
+            <img src="/images/photo_1.jpg" alt="Cooming Soon"   width="160px" height="200px" >
+            <img src="/images/photo_2.jpg" alt="Cooming Soon"   width="160px" height="200px" >
+            <img src="/images/photo_3.jpg" alt="Cooming Soon"   width="160px" height="200px" >
+            <img src="/images/photo_4.jpg" alt="Cooming Soon"   width="160px" height="200px" >
+            <img src="/images/photo_5.jpg" alt="Cooming Soon"   width="160px" height="200px" >
+            <img src="/images/photo_6.jpg" alt="Cooming Soon"   width="160px" height="200px" >
+            <img src="/images/photo_7.jpg" alt="Cooming Soon"  width="160px" height="200px" >
         </section>
     </section>
 
